--- a/SCClientApp/App.config
+++ b/SCClientApp/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <appSettings>
     <add key="clientwebapi_url" value="http://localhost/SCClientApi/odata"/>
+    <add key="serverwebapi_url" value="http://localhost/SCServerApi/api/customer/edition_url/"/>
   </appSettings>
   <startup>
   </startup>
