--- a/SC.ViewModels/SC.ViewModels.csproj
+++ b/SC.ViewModels/SC.ViewModels.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EditionInfo.cs" />
+    <Compile Include="IDefaultView.cs" />
     <Compile Include="ModuleVm.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
