--- a/Module_Organization/packages.config
+++ b/Module_Organization/packages.config
@@ -6,3 +6,8 @@
   <package id="Prism.Wpf" version="6.2.0" targetFramework="net452" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
 </packages>
+
+<!--<package id="Prism.Core" version="6.2.0" targetFramework="net452" />
+  <package id="Prism.Unity" version="6.2.0" targetFramework="net452" />
+  <package id="Prism.Wpf" version="6.2.0" targetFramework="net452" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />-->
