--- a/SCClientApp.SetupDialogue/App.config
+++ b/SCClientApp.SetupDialogue/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
    <appSettings>
-    <add key="serverwebapi_url" value="http://localhost/SCServerApi/api/customer/edition_url/"/>
+    <add key="serverwebapi_url" value="http://localhost:60375/api/customer/edition_url/"/>
   </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
