--- a/SCClientApp/App.config
+++ b/SCClientApp/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="clientwebapi_url" value="http://localhost:60370/odata" />
-    <add key="serverwebapi_url" value="http://localhost:60375/api/customer/edition_url/" />
+    <add key="clientwebapi_url" value="http://localhost/SCClientApi/odata" />
+    <add key="serverwebapi_url" value="http://localhost/SCServerApi/api/customer/edition_url/" />
   </appSettings>
   <startup>
   </startup>
