--- a/SC.ViewModels/SC.ViewModels.csproj
+++ b/SC.ViewModels/SC.ViewModels.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SectionVm.cs" />
     <Compile Include="EditionInfo.cs" />
     <Compile Include="IDefaultView.cs" />
     <Compile Include="ModuleVm.cs" />
