port changes in app config

--- a/SCClientApp.SetupDialogue/App.config
+++ b/SCClientApp.SetupDialogue/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
 
-    <add key="serverwebapi_url" value="http://localhost/SCServerApi/api/customer/edition_url/" />
+    <add key="serverwebapi_url" value="http://localhost:60370/api/customer/edition_url/" />
   </appSettings>
   <startup>
   </startup>
